tests/error/alias_errors/recursive.err
Error: Recursive type alias (at $FILE:4:0)
  | 
2 | 
3 | 
4 | MyAlias = guppy.type_alias("MyAlias", "MyAlias")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type alias `MyAlias` expands to itself

Guppy compilation failed due to 1 previous error
